     repository due to mismatched parent errors - a symptom of index errors -
     you should simply take a full copy of that remote repository to a clean
     directory outside any local repositories, then run reconcile on it, and
     finally pull from it locally. (And naturally email the repositories owner
     to ask them to upgrade and run reconcile).
     (Robert Collins)

  FEATURES:

   * New ``reconfigure`` command (Aaron Bentley)

  PERFORMANCE:

   * Commit in quiet mode is now slightly faster as the information to
     output is no longer calculated. (Ian Clatworthy)

   * Commit no longer checks for new text keys during insertion when the
     revision id was deterministically unique. (Robert Collins)

   * Committing a change which is not a merge and does not change the number of
     files in the tree is faster by utilising the data about whether files are
     changed to determine if the tree is unchanged rather than recalculating
     it at the end of the commit process. (Robert Collins)

   * Inventory serialisation no longer double-sha's the content.
     (Robert Collins)

   * Partial commits are now approximately 40% faster by walking over the
     unselected current tree more efficiently. (Robert Collins)

   * XML inventory serialisation takes 20% less time while being stricter about
     the contents. (Robert Collins)

  IMPROVEMENTS:

   * Mutt is now a supported mail client; set ``mail_client=mutt`` in your
     bazaar.conf and ``send`` will use mutt. (Keir Mierle)

   * Show encodings, locale and list of plugins in the traceback message.
     (Martin Pool, #63894)

  BUG FIXES:

   * The basename, not the full path, is now used when checking whether
     the profiling dump file begins with ``callgrind.out`` or not. This
     fixes a bug reported by Aaron Bentley on IRC. (Ian Clatworthy)

   * Commands reporting exceptions can now be profiled and still have their
     data correctly dumped to a file. For example, a ``bzr commit`` with